--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "scripts": {
+"scripts": {
     "dev:client": "vite --host --port 3000",
     "dev": "pnpm dev:client",
     "build:client": "vite build --outDir dist/static",
     "build": "rm -rf dist && pnpm build:client && cp package.json dist && touch dist/build.flag",
     "typecheck": "vue-tsc --noEmit",
-    "lint": "echo 'No linter configured. Consider adding ESLint for code quality checks.'"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@vueuse/core": "^11.3.0",
@@ -24,12 +27,17 @@
     "vue-router": "^4.4.5",
     "zod": "^3.24.2"
   },
-  "devDependencies": {
+"devDependencies": {
     "@types/node": "^22.10.2",
     "@types/three": "^0.160.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.20.1",
     "postcss": "^8.5.3",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
     "terser": "^5.44.1",
     "typescript": "~5.7.2",
