--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,7 @@
 server {
-    listen 80;
+    # Railway 的 Metal Edge 架构需要使用 PORT 环境变量
+    # envsubst 会替换 $PORT 为实际端口值
+    listen $PORT;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
