--- a/nginx.conf
+++ b/nginx.conf
@@ -6,18 +6,23 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # 禁用服务器版本信息
+    server_tokens off;
+
     # Gzip 压缩
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json application/xml;
 
     # SPA 路由支持 - 所有路由都返回 index.html
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
-    # 静态资源缓存
+    # 静态资源缓存（带版本号的资源）
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
@@ -27,4 +32,5 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 }
