--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,41 @@
 server {
-    # Railway 的 Metal Edge 架构需要使用 PORT 环境变量
-    # envsubst 会替换 $PORT 为实际端口值
+    # Railway 使用 PORT 环境变量（envsubst 会替换 $PORT）
     listen $PORT;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
 
-    # 禁用服务器版本信息
+    # 安全：禁用服务器版本信息
     server_tokens off;
 
-    # Gzip 压缩
+    # Gzip 压缩配置
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json application/xml;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json
+        application/xml;
 
-    # SPA 路由支持 - 所有路由都返回 index.html
+    # SPA 路由支持：所有路由都返回 index.html
     location / {
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
-    # 静态资源缓存（带版本号的资源）
+    # 静态资源缓存（带版本号的资源，长期缓存）
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # 安全头
+    # 安全响应头
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
