fix: 部署配置优化

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,13 +26,17 @@ server {
     # SPA 路由支持：所有路由都返回 index.html
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        # HTML 文件不缓存，确保更新后能立即生效
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires "0" always;
     }
 
     # 静态资源缓存（带版本号的资源，长期缓存）
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|webp|avif)$ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
+        add_header Cache-Control "public, immutable, max-age=31536000" always;
+        access_log off;
     }
 
     # 安全响应头
