fix: 添加.dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,56 @@
+# 依赖和构建产物
 node_modules
 dist
+.pnpm-store
+
+# 版本控制
 .git
+.gitignore
+.gitattributes
+
+# 环境变量文件
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
+
+# 日志文件
 *.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 系统文件
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE 配置
+.vscode
+.idea
+*.code-workspace
+
+# 文档和说明
 README.md
+*.md
+RAILWAY_DEPLOYMENT.md
+DEPLOYMENT.md
+TROUBLESHOOTING.md
+
+# 测试文件
+coverage
+.nyc_output
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
+
+# 其他
+.editorconfig
+.prettierrc
+.eslintrc*
+tsconfig.json
