--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.0.0",
+    "marked": "^17.0.1",
     "tailwind-merge": "^3.0.2",
     "three": "^0.160.0",
     "vue": "^3.5.13",
@@ -28,6 +29,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/marked": "^6.0.0",
     "@types/node": "^22.10.2",
     "@types/three": "^0.160.0",
     "@vitejs/plugin-vue": "^5.2.1",
